# TrOCR-Pipeline

./: .gitignore  Fine_tune_TrOCR_pipeline.ipynb  README.md  get-training-data  pyproject.toml  requirements.txt  run-jupyter-in-wsl.bat  upload_model_and_processor.ipynb  useful_sources_for_setup.txt
trocr/: Copy_Fine_tune_TrOCR_on_IAM_Handwriting_Database_using_native_PyTorch.ipynb  Fine_tune_TrOCR.ipynb  Fine_tune_TrOCR.py  Fine_tune_TrOCR_on_IAM_Handwriting_Database_using_native_PyTorch.ipynb  Inference_with_TrOCR_+_Gradio_demo.ipynb  datautils.py  fine_tune_trocr_on_iam_handwriting_database_using_seq2seqtrainer.py  getTextFile.py  get_unicode_data.py  lightning-experiment.py  split_data.py  torchrun.cmd  trainer-experiment.py
trocr/tibetan-dataset/: chunkZipAFolder.ps1
trocr/utils/: find_low_dimensions.py
