[tool.poetry]
name = "trocr-tibetan-fine-tuning"
version = "0.1.0"
description = ""
authors = ["sinapy <si.sarsharpoor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "2.0.1+cu117", source = "torch"}
jupyter = "^1.0.0"
transformers = "^4.37.2"
pillow = "^10.2.0"
pandas = "^2.2.0"
datasets = "^2.17.0"
jiwer = "^3.0.3"
scikit-learn = "^1.4.0"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu117"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
